<resources>

    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="new_folder">New folder</string>
    <string name="new_file">New file</string>
    <string name="edit_folder">Edit folder</string>
    <string name="edit_file">Edit file</string>
    <string name="folder_deleted">Folder deleted</string>
    <string name="file_deleted">File deleted</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="typography">Typography</string>
    <string name="share">Share</string>
    <string name="share_as">Share as:</string>
    <string name="press_back_exit">Press BACK again to exit</string>
    <string name="nothing_here">Nothing here</string>
    <string name="title">Title</string>
    <string name="whats_your_mind">What\'s on your mind?</string>
    <string name="statistics">Statistics</string>
    <string name="paragraphs">Paragraphs</string>
    <string name="words">Words</string>
    <string name="chars">Characters</string>
    <string name="with_space">With whitespaces</string>
    <string name="without_space">Without whitespaces</string>
    <string name="read_time">Reading time</string>
    <string name="size">Size</string>
    <string name="font">Font</string>
    <string name="margin">Margin</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="language">Language</string>
    <string name="contact_us">Contact Us</string>
    <string name="report_bug">Report a Bug</string>
    <string name="rate_review">Rate &amp; Review</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="you_should_try">You should give a try to Verne for Android, this app made for writers is awesome!</string>
    <string name="something_went_wrong">Oops! Something went wrong</string>
    <string name="text">Text</string>
    <string name="html_text">HTML text</string>
    <string name="html_file">HTML file</string>
    <string name="pdf_file">PDF file</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="move">Move</string>
    <string name="print">Print</string>
    <string name="unsupported_file_format">Unsupported file format</string>
    <string name="file_empty">File is empty</string>

    <string name="english" translatable="false">English</string>
    <string name="portuguese" translatable="false">Português</string>

</resources>