<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_print"
        android:title="@string/print"
        android:icon="@drawable/ic_print"
        app:iconTint="@android:color/white"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:iconTint="@android:color/white"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_rename"
        android:title="@string/rename"
        android:icon="@drawable/ic_edit"
        app:iconTint="@android:color/white"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_move"
        android:title="@string/move"
        android:icon="@drawable/ic_folder"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom"/>

</menu>